Fixes the label wrapping for the form elements

--- a/src/styles/fixDW.css
+++ b/src/styles/fixDW.css
@@ -133,5 +133,7 @@
     width: 100%;
 }
 
-
+.xbm-x-dw .fielditem2 {
+    white-space: normal;
+}
 
